<resources>
    <string name="app_name">ViewLibrary</string>


    <string name="please_edit_password">请输入支付密码</string>
    <string name="dialog_withdrawal_money">提现金额¥ %s元</string>
    <string name="Forgot_password">忘记密码?</string>
    <string name="Are_you_sure_you_want_to_delete_it">确定要删除吗?</string>
    <string name="prompt">提示</string>
    <string name="cancel">取消</string>
    <string name="determine">确定</string>
    <string name="Please_enter_information">请输入信息</string>
    <string name="The_title">标题</string>
    <string name="content">内容</string>

    <string name="LoadingController_loading_message">加载中...</string>
    <string name="LoadingController_network_error_message">加载失败，请检查网络连接~</string>
    <string name="LoadingController_error_message">加载失败，点击重试~</string>
    <string name="LoadingController_error_retry">重新加载</string>
    <string name="not_have_data">暂无数据</string>

</resources>
