<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/shape_dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/prompt"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:gravity="center"
        android:lineSpacingExtra="3dp"
        android:text="@string/Are_you_sure_you_want_to_delete_it"
        android:textColor="@color/color_666"
        android:textSize="14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_f2f2f2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/shape_dialog_left_white"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/color_999"
            android:textSize="14sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/color_f2f2f2" />

        <TextView
            android:id="@+id/tvDetermine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/shape_dialog_right_white"
            android:gravity="center"
            android:text="@string/determine"
            android:textColor="@color/color_e53d3d"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>
