<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog_bg"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/iv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="5dp"
            android:src="@drawable/ic_close_dialog"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/please_edit_password"
            android:textColor="@color/color_666"
            android:textSize="15sp" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/color_f2f2f2" />


    <TextView
        android:id="@+id/tv_withdrawal_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/dialog_withdrawal_money"
        android:textColor="@color/color_333"
        android:textSize="13sp"
        android:visibility="gone" />


    <com.zhowin.viewlibrary.view.PasswordEditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:inputType="numberPassword"
        android:maxLength="6"
        app:bgCorner="2dp"
        app:passwordColor="@color/color_333" />

    <TextView
        android:id="@+id/tv_Forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|right"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/Forgot_password"
        android:textColor="@color/color_999"
        android:textSize="13sp"
        android:visibility="gone" />


</LinearLayout>
